# jota-challenge

./: .env  .gitignore  Dockerfile  Makefile  README.md  celerybeat-schedule.db  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: challenge.yml
JOTA/: asgi.py  celery_settings.py  settings.py  urls.py  wsgi.py
accounts/: custom_permissions.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_role_delete_role.py  0003_alter_customuser_managers_alter_customuser_email.py  0004_customuser_plan.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20250524_1653.py  0003_plan_is_basic.py
news/: filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_published_at.py  0003_news_scheduled_at.py  0004_alter_news_author.py  0005_alter_news_image.py
tests/accounts/: test_user_views.py
tests/core/: test_plan_serializers.py  test_plan_views.py  test_vertical_serializers.py  test_vertical_views.py
tests/news/: test_news_views.py
